Spacing fix attempt #1
changed .bigtext's top value to 0

--- a/css/standard.css
+++ b/css/standard.css
@@ -45,7 +45,7 @@ div#overlay {
 
 .bigtext {
   position: absolute;
-    top: -60px;
+    top: 0;
     left: 0;
     bottom: 0;
     right: 0;
